--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrap">
         <div class="header">
             <div>
-                <img class="logo" src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg" alt="logo">
+                <h1><a href="#"><img class="logo" src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/logo-all-dark.svg" alt="logo"></a></h1>               
             </div>
             <div class="menu">
                 <ul>
@@ -44,7 +44,7 @@
                         <span class="focus">本日精選</span>
                     </div>
                     <div class="price">
-                        <h2>焦糖馬卡龍</h2>
+                        <h3>焦糖馬卡龍</h3>
                         <p>NT$ 450</p>
                     </div>
                     <div>
@@ -58,7 +58,7 @@
                         <span class="focus">本日精選</span>
                     </div>
                     <div class="price">
-                        <h2>焦糖馬卡龍</h2>
+                        <h3>焦糖馬卡龍</h3>
                         <p>NT$ 450</p>
                     </div>
                     <div>
@@ -72,7 +72,7 @@
                         <span class="focus">本日精選</span>
                     </div>
                     <div class="price">
-                        <h2>焦糖馬卡龍</h2>
+                        <h3>焦糖馬卡龍</h3>
                         <p>NT$ 450</p>
                     </div>
                     <div>
@@ -86,7 +86,7 @@
                         <span class="focus">本日精選</span>
                     </div>
                     <div class="price">
-                        <h2>焦糖馬卡龍</h2>
+                        <h3>焦糖馬卡龍</h3>
                         <p>NT$ 450</p>
                     </div>
                     <div>
@@ -100,7 +100,7 @@
                         <span class="focus">本日精選</span>
                     </div>
                     <div class="price">
-                        <h2>焦糖馬卡龍</h2>
+                        <h3>焦糖馬卡龍</h3>
                         <p>NT$ 450</p>
                     </div>
                     <div>
@@ -114,7 +114,7 @@
                         <span class="focus">本日精選</span>
                     </div>
                     <div class="price">
-                        <h2>焦糖馬卡龍</h2>
+                        <h3>焦糖馬卡龍</h3>
                         <p>NT$ 450</p>
                     </div>
                     <div>
@@ -125,11 +125,11 @@
         </div>
         <div class="pagination">
             <ul>
-                <li><a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_left.png" alt="上一頁"></a></li>
+                <li><a class="arrow" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_left.png" alt="上一頁"></a></li>
                 <li><a class="page1" href="#">1</a></li>
                 <li><a href="#">2</a></li>
                 <li><a href="#">3</a></li>
-                <li><a href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_right.png" alt="下一頁"></a></li>
+                <li><a class="arrow" href="#"><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/master/student-week1/arrow_right.png" alt="下一頁"></a></li>
             </ul>
         </div>
     </div>
