--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- 右上選單 -->
             <div class="menu">
                 <ul>
-                    <li><a href="index.html">首頁</a></li>
+                    <li><a href="#">首頁</a></li>
                     <li><a href="#">甜點</a></li>
                     <li><a href="#">登入</a></li>    
                 </ul>
